--- a/css/styles.css
+++ b/css/styles.css
@@ -926,11 +926,17 @@ transition: transform var(--animation);
 
 }
 
-.close {
-  display: inline-block;
-  text-align: center;
+.modal-close {
+  width: 11px;
+  height: 11px;
 
 }
+
+.modal-close:hover,
+.modal-close:focus {
+  fill: var(--brand-blue-color);
+}
+
 .form-text{
 font-weight: 700;
 font-size: 20px;
@@ -966,10 +972,21 @@ margin-bottom: 0;
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
     border-radius: 4px;
-    
-
-    
+      
   }
+.form-field input:focus,
+.form-field input:hover,
+.form-field input:focus-visible{
+  border-color: var(--brand-blue-color);
+  cursor: pointer;
+outline: none;
+}
+
+.form-field input:hover+.icon-form,
+.form-field input:focus+.icon-form {
+  fill: var(--brand-blue-color);
+}
+
   .form-field textarea{
     /* display: inline-block; */
     padding: 12px 16px;
@@ -979,6 +996,14 @@ margin-bottom: 0;
     resize: none;
     /* margin-bottom: 20px; */
   }
+.form-field textarea:hover,
+.form-field textarea:focus,
+.form-field textarea:focus-visible{
+  border-color: var(--brand-blue-color);
+  cursor: pointer;
+  outline: none;
+}
+
   .form-field textarea::placeholder{
     font-size: 12px;
     line-height: 1.16;
@@ -994,6 +1019,7 @@ margin-bottom: 0;
   color: var(--brand-grey-color);
   margin-top: 20px;
   margin-bottom: 30px;
+ 
   }
   .btn-form{
     display: block;
@@ -1004,6 +1030,7 @@ margin-bottom: 0;
   display: inline-block;
   width: 18px;
   height: 18px;
+  fill: inherit;
 
   position: absolute;
   top: 70%;
@@ -1014,6 +1041,32 @@ margin-bottom: 0;
 .checkbox{
   margin-right: 8px;
   margin-left: 12px;
+  /* appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none; */
 }
- 
+/* .checkbox-icon{
+  display: inline-block;
+  width: 16px;
+  height: 15px;
   
+  fill: black;
+  background-color: #000000;
+  
+}
+.checkbox:checked + *.checkbox-icon{
+fill: green;
+background-color: #2196f3; */
+
+
+
+background-origin:border-box
+
+.checkbox-icon {
+  display: inline-block;
+  
+  fill: white;
+  stroke: var(--brand-blue-color);
+}
+
+
