--- a/css/styles.css
+++ b/css/styles.css
@@ -740,6 +740,7 @@ background-color: transparent;
 }
 .subscribe-box{
  padding-top: 12px;
+ margin-left: auto;
  
 }
 .subscribe-form-box{
@@ -974,6 +975,7 @@ margin-bottom: 0;
     box-sizing: border-box;
     border-radius: 4px;
     transition: border-color var(--animation);
+    height: 40px;
 
   }
 .form-input:focus,
@@ -1007,7 +1009,7 @@ margin-bottom: 0;
 }
 
   .form-field textarea{
-    
+    height: 120px;
     padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
@@ -1041,6 +1043,10 @@ margin-bottom: 0;
   margin-top: 20px;
   margin-bottom: 30px;
  
+  }
+
+  .politic a{
+color: var(--brand-blue-color);
   }
   .btn-form{
     display: block;
